# webgl-simple

./: .gitignore  CMakeLists.txt  compile_commands.json  main.cpp
include/glad/: glad.h
src/: glad.c
